--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,180 @@
 :root {
-/* bg color */
+  /* Fonts */
+  --primary-font: 'Roboto', sans-serif;
+  --secondary-font: 'Raleway', sans-serif;
+  /* bg color */
   --primary-bg-color: #ffffff;
-  --secondary-bg-color: #2E2F42;
-  --light-bg-color: #F4F4FD;
-  
+  --secondary-bg-color: #2e2f42;
+  --light-bg-color: #f4f4fd;
+  --primary-brand-color: #4d5ae5;
+  --action-color: #404bbf;
+  --accent-color: #e7e9fc;
+  /* text color */
+  --body-text-color: #434455;
 }
 
+/* base style */
+
 body {
-  background-color: #ffffff;
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
+  background-color: var(--primary-bg-color);
+  font-family: var(--primary-font);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  color: #434455;
+  letter-spacing: 0.02em;
+  color: var(--body-text-color);
+}
+
+/* reset */
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+/* button */
+
+/* Site nav */
+
+.site-nav .link.top-link {
+  color: var(--primary-brand-color);
+}
+
+.site-nav .top-logo {
+  color: var(--secondary-bg-color);
+}
+
+.site-nav .link {
+  color: var(--secondary-bg-color);
+}
+
+.site-nav .link:hover,
+.site-nav .link:focus {
+  color: var(--action-color);
+}
+
+.site-cont .link {
+  color: var(--body-text-color);
+}
+
+.site-cont .link:hover,
+.site-cont .link:focus {
+  color: var(--action-color);
+}
+
+/* Hero */
+.hero {
+  background-color: var(--secondary-bg-color);
+}
+
+.hero-title {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--primary-bg-color);
+}
+
+.hero-button {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: var(--primary-bg-color);
+  cursor: pointer;
+  background-color: var(--action-color);
+}
+
+/* Section */
+
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-transform: capitalize;
+  color: var(--secondary-bg-color);
+}
+
+.section-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  /* text-align: center; */
+  letter-spacing: 0.02em;
+  color: var(--secondary-bg-color);
+}
+
+/* Section Team */
+
+.team {
+  background-color: var(--light-bg-color);
+}
+
+.team-item {
+  background-color: var(--primary-bg-color);
+}
+
+/* Section button */
+
+.button {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--body-text-color);
+}
+/* action filter */
+
+.button:hover,
+.button:focus {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: var(--primary-bg-color);
+  cursor: pointer;
+  background-color: var(--action-color);
+}
+
+/* Section card */
+
+.section-card {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  /* text-align: center; */
+  letter-spacing: 0.02em;
+  color: var(--body-text-color);
+}
+
+/* Footer */
+
+.footer .link {
+  color: var(--primary-brand-color);
+}
+
+.footer .under-logo {
+  color: var(--light-bg-color);
+}
+
+.footer {
+  background-color: var(--secondary-bg-color);
+}
+
+.slogan {
+  color: var(--light-bg-color);
 }
 
 /* color page */
@@ -29,54 +190,3 @@ body {
 /* action color #404BBF */
 
 /* cloud color #F4F4FD */
-
-.list {
-  list-style: none;
-}
-
-.link {
-  text-decoration: none;
-}
-
-
-/* Site nav */
-
-.site-nav .link {
-  color: #4D5AE5;
-}
-
-.site-nav .top-logo {
-  color: #2E2F42;
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: #404BBF;
-}
-
-.site-nav .logo {
-  color:#4D5AE5 ;
-}
-
-.site-cont .link { 
-  color: #434455;
-}
-
-.site-cont .link:hover,
-.site-cont .link:focus {
-  color: #404BBF;
-}
-
-/* Hero */
-
-
-
-/* Footer */
-
-.footer .link {
-  color: #4D5AE5;
-}
-
-.footer .under-logo {
-color: #F4F4FD;
-}
