--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
 body {
   background-color: var(--primary-bg-color);
   font-family: var(--primary-font);
+  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -41,10 +42,24 @@ body {
 
 .site-nav .link.top-link {
   color: var(--primary-brand-color);
+  font-family: var(--secondary-font);
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .site-nav .top-logo {
   color: var(--secondary-bg-color);
+  font-family: var(--secondary-font);
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .site-nav .link {
@@ -68,7 +83,7 @@ body {
   color: var(--action-color);
 }
 
-.site-nav > a {
+/* .site-nav > a {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 800;
@@ -77,6 +92,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
+ */
 
 /* Hero */
 .hero {
